=======================================================
network-manager-applet-1.8.20
Overview of changes since network-manager-applet-1.8.18
=======================================================

* Build of libnm-gtk, a libnm-glib compatibility library, is disabled by
  default. It can be enabled by passing --with-libnm-gtk to configure
  script. Nobody should need it by now. Users that still use this are
  encouraged to let us know before the libnm-glib support is removed for good.
* Improve the mobile broadband wizard (issue#15).
* Fix a bug in the wifi dialog that made widgets disappear when
  selecting a different device (rh#1665653).
* Support secret agent hints needed when using IWD as wireless
  backend.
* Update Brazilian Portuguese, Catalan, Croatian, Czech, Danish,
  French, Lithuanian, Polish, Russian, Slovak and Turkish
  translations.

=======================================================
network-manager-applet-1.8.18
Overview of changes since network-manager-applet-1.8.16
=======================================================

* libnma: fix wrongly showing hidden GUI elements, which
  causes connection editing to behave wrong (issue#20).
* libnma, c-e: fix translation issues in GUI due to missing
  gettext domain (bgo#792285).
* Update Croatian, German, Indonesian, Italian, Kazakh, and Turkish
  translations.

=======================================================
network-manager-applet-1.8.16
Overview of changes since network-manager-applet-1.8.14
=======================================================

* Fix various issues that causes GtkApplication to quit at the wrong time.
* Read the Mobile Providers database from a build-time determined location.
* Modernize Gtk+ 3.0 use in preparations for Gtk+ 4.0.
* Update Brazilian Portuguese, Polish, Turkish, German translation.

=======================================================
network-manager-applet-1.8.14
Overview of changes since network-manager-applet-1.8.12